--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0dcf5f8c",
+   "id": "4866f476",
    "metadata": {},
    "source": [
     "# Statistics"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "86e7915b",
+   "id": "98d66bb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "848e44fb",
+   "id": "2a1b9913",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b18ab4bc",
+   "id": "58925085",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "40ddefb5",
+   "id": "0ea74178",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eec6b061",
+   "id": "1a6bb191",
    "metadata": {},
    "source": [
     "# Intution behind probability density curve for a continous random varialbe \n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75e4a2dd",
+   "id": "db856018",
    "metadata": {},
    "source": [
     "https://online.stat.psu.edu/stat414/lesson/14/14.1"
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53b448d6",
+   "id": "3e278c57",
    "metadata": {},
    "source": [
     "# The properties of probability Density function "
@@ -119,7 +119,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "e2050007",
+   "id": "9816b32a",
    "metadata": {},
    "source": [
     "![properties%20of%20pdf%20continous%20random.png](attachment:properties%20of%20pdf%20continous%20random.png)"
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75bbfdb5",
+   "id": "48896467",
    "metadata": {},
    "source": [
     "## 1. The area under pdf will never be in negative \n",
@@ -138,14 +138,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70b12ac8",
+   "id": "ef7220e6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "bfcd8c02",
+   "id": "16d59d95",
    "metadata": {},
    "source": [
     "# Normal Distribution "
@@ -158,7 +158,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "8402a32a",
+   "id": "78bb23a2",
    "metadata": {},
    "source": [
     "![normal%20distribution%20inter.png](attachment:normal%20distribution%20inter.png)"
@@ -166,22 +166,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7b33a05",
+   "id": "31905b6e",
    "metadata": {},
    "source": [
     "In above graph the count / density of students whoes height is between 5.4 to 5.9 is more this is what normal distribution curves represent about the data"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8de4f75",
+   "cell_type": "markdown",
+   "id": "36ce5809",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
+    "When we talk about the distribution we are basically talking about the representation of probability values of the outcome on graph\n",
     " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cb4e6be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
