updated the stats

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4866f476",
+   "id": "666f98e8",
    "metadata": {},
    "source": [
     "# Statistics"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "98d66bb3",
+   "id": "57762ed5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2a1b9913",
+   "id": "b4437ffc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58925085",
+   "id": "ea2cd48e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0ea74178",
+   "id": "48128de2",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a6bb191",
+   "id": "3f1426e2",
    "metadata": {},
    "source": [
     "# Intution behind probability density curve for a continous random varialbe \n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db856018",
+   "id": "19999468",
    "metadata": {},
    "source": [
     "https://online.stat.psu.edu/stat414/lesson/14/14.1"
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e278c57",
+   "id": "ad8f8741",
    "metadata": {},
    "source": [
     "# The properties of probability Density function "
@@ -119,7 +119,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "9816b32a",
+   "id": "d83caa16",
    "metadata": {},
    "source": [
     "![properties%20of%20pdf%20continous%20random.png](attachment:properties%20of%20pdf%20continous%20random.png)"
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48896467",
+   "id": "0d6ba707",
    "metadata": {},
    "source": [
     "## 1. The area under pdf will never be in negative \n",
@@ -138,14 +138,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef7220e6",
+   "id": "4fbbad84",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "16d59d95",
+   "id": "6b3e8278",
    "metadata": {},
    "source": [
     "# Normal Distribution "
@@ -158,7 +158,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "78bb23a2",
+   "id": "58dc91ac",
    "metadata": {},
    "source": [
     "![normal%20distribution%20inter.png](attachment:normal%20distribution%20inter.png)"
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31905b6e",
+   "id": "a4a874a7",
    "metadata": {},
    "source": [
     "In above graph the count / density of students whoes height is between 5.4 to 5.9 is more this is what normal distribution curves represent about the data"
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36ce5809",
+   "id": "5bcb6a33",
    "metadata": {},
    "source": [
     "When we talk about the distribution we are basically talking about the representation of probability values of the outcome on graph\n",
@@ -184,10 +184,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cb4e6be",
+   "id": "4b1eeeb0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# unifor distribution - where the probability of all the outcomes is same \n",
+    "# bernouli distribution - where the out come is success or failure  like coin toss\n",
+    "# binomial distribtuion - where there are n numbers of trail and each trial is independent of each other\n",
+    "# geometric destribution - the probability of getting first success i.e what is the probability of getting head on thrid trail\n",
+    "# posion distribution  - when there is a probability rate is given like 5 cars / h are entering in the mall parking hall \n",
+    "\n",
+    "#continous distribution "
+   ]
   }
  ],
  "metadata": {
