--- a/Hypothesis Testing .ipynb
+++ b/Hypothesis Testing .ipynb
@@ -226,6 +226,169 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91b08fe5",
+   "metadata": {},
+   "source": [
+    "# Revisited "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80b63eb2",
+   "metadata": {},
+   "source": [
+    "Hypothesis testing is a statistical method used to test a claim or hypothesis about a parameter in a population, using data measured in a sample¹. This parameter could be the mean, standard deviation, proportion, or any other numerical characteristic of the population¹.\n",
+    "\n",
+    "Here's how it works:\n",
+    "\n",
+    "1. **Null Hypothesis (H0)**: This is a statement about the population parameter that is assumed to be true unless there is convincing evidence to the contrary⁴. For example, if we believe that the average weight of a certain species of bird is 2kg, then our null hypothesis would be \"The average weight of the bird species is 2kg\".\n",
+    "\n",
+    "2. **Alternative Hypothesis (H1)**: This is a statement about the population parameter that contradicts the null hypothesis⁴. It's accepted as true only if there's convincing evidence in favor of it⁴. In our bird example, an alternative hypothesis could be \"The average weight of the bird species is not 2kg\".\n",
+    "\n",
+    "3. **Test Statistic**: This is a value computed from the sample data that's used in making a decision about the rejection of the null hypothesis³. It converts the sample mean or sample proportion to a Z- or t-score under the assumption that the null hypothesis is true³.\n",
+    "\n",
+    "4. **P-value and Level of Significance**: The p-value measures the strength of evidence in support of a null hypothesis. The level of significance (commonly set at 0.05) is a threshold used to determine when we reject the null hypothesis. If the p-value is less than or equal to the level of significance, we reject the null hypothesis¹.\n",
+    "\n",
+    "In summary, hypothesis testing allows us to make an educated guess about an assumption using statistics. It helps us understand how true our assumption might be for the entire population from where our sample data was taken⁶."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15612d9b",
+   "metadata": {},
+   "source": [
+    "So here is what is happening \n",
+    "\n",
+    "Step 1: if we draw a large amount of samples form the population and plot the means of all the sample we will get a normal distribtion.\n",
+    "\n",
+    "Step 2: Now in hypothesis testing we basically use the mean of the sample and this mean is a data point in the noraml distribution so we convert that mean data point into standard noraml distribution using the Z-score."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5755e900",
+   "metadata": {},
+   "source": [
+    "# Please first understand the difference between Z score and Z Transformation "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4658ba98",
+   "metadata": {},
+   "source": [
+    "The terms \"Z-score\" and \"Z-transformation\" are related, but they refer to slightly different concepts:\n",
+    "\n",
+    "1. **Z-score**: A Z-score is a statistical measurement that describes a value's relationship to the mean of a group of values⁶. It is measured in terms of standard deviations from the mean⁶. If a Z-score is 0, it indicates that the data point's score is identical to the mean score⁶. A Z-score of 1.0 would indicate a value that is one standard deviation from the mean⁶. Z-scores may be positive or negative, with a positive value indicating the score is above the mean and a negative score indicating it is below the mean⁶.\n",
+    "\n",
+    "2. **Z-transformation**: Z-transformation, also known as standardization, is a process of converting a set of raw scores to a set of standardized scores that have a mean of zero and a standard deviation of one¹. This process involves calculating the Z-score for each data point in your dataset. The resulting dataset is said to have been \"standardized\" or \"Z-transformed\". This transformation is useful for comparing scores from different distributions or computing probabilities associated with normal distributions¹.\n",
+    "\n",
+    "So, while a Z-score refers to the standardized score for an individual data point, a Z-transformation refers to the process of standardizing an entire dataset.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95750dd1",
+   "metadata": {},
+   "source": [
+    "SO we are actually using the Z score in hypothesis and not the z transformation "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cad3dffc",
+   "metadata": {},
+   "source": [
+    "So here is what is happening \n",
+    "Step 1: if we draw a large amount of samples form the population and plot the means of all the sample we will get a normal distribtion.\n",
+    "\n",
+    "Step 2: Now in hypothesis testing we basically use the mean of the sample and this mean is a data point in the noraml distribution so we convert that mean data point into Z score. It gives us how far the datapoint mean (sample's mean) is from the hypothised mean of the population. \n",
+    "\n",
+    "step 3: if it lies outside the confidence interval we reject the hypotheised mean "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6385e56",
+   "metadata": {},
+   "source": [
+    "The flow of the quesiton \n",
+    "\n",
+    "Yes, you've got it! Your understanding of the steps involved in hypothesis testing is correct. Here's a recap:\n",
+    "\n",
+    "1. **Step 1 - Null Hypothesis (H0)**: Define a null hypothesis. For example, the population mean is 50.\n",
+    "2. **Step 2 - Alternative Hypothesis (H1)**: Define an alternative hypothesis. In this case, the population mean is not equal to 50.\n",
+    "3. **Step 3 - Calculate Z-score**: For the given sample, calculate the sample mean and standard deviation. Then calculate the Z-score using these values.\n",
+    "4. **Step 4 - Calculate p-value**: Find the p-value corresponding to the calculated Z-score.\n",
+    "5. **Step 5 - Decision Making**: If the p-value is less than your chosen significance level (often 0.05), reject the null hypothesis.\n",
+    "\n",
+    "So yes, your understanding of these steps is correct! Great job on understanding these statistical concepts! 😊"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76989390",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdea0f6b",
+   "metadata": {},
+   "source": [
+    "The significance value is basically the probability below which I will reject my null hypthesis and p value is the probability of the null hypothesis?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ec6bca9",
+   "metadata": {},
+   "source": [
+    "The **significance level** (often denoted as α) is a threshold that you set before conducting your hypothesis test. It represents the probability of rejecting the null hypothesis when it is true, also known as a Type I error. If your p-value is less than or equal to this significance level, then you reject the null hypothesis.\n",
+    "\n",
+    "The **p-value** is the probability of obtaining a result as extreme as, or more extreme than, the result actually observed, assuming that the null hypothesis is true. It's a measure of the strength of evidence against the null hypothesis.\n",
+    "\n",
+    "So, if your p-value is less than your chosen significance level (like 0.05), it means there's strong evidence against the null hypothesis, and you would reject it. However, it's important to remember that this doesn't prove the alternative hypothesis; it just suggests that the null hypothesis is unlikely given the observed data. Great job on understanding these statistical concepts! 😊"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f16cd89b",
+   "metadata": {},
+   "source": [
+    "Absolutely, let's consider an example.\n",
+    "\n",
+    "Suppose you're a botanist studying the heights of a certain type of plant. You believe that these plants typically grow to an average height of 10 cm. So, you set up your null and alternative hypotheses as follows:\n",
+    "\n",
+    "- **Null Hypothesis (H0)**: The average height of the plants is 10 cm.\n",
+    "- **Alternative Hypothesis (H1)**: The average height of the plants is not 10 cm.\n",
+    "\n",
+    "You collect a sample of 30 plants and find that the average height is 12 cm with a standard deviation of 3 cm. You perform a Z-test and find that your Z-score is 2. \n",
+    "\n",
+    "Now, you want to find the p-value associated with this Z-score. The p-value is the probability of observing a Z-score as extreme as 2 or more extreme, assuming the null hypothesis is true. \n",
+    "\n",
+    "If you look up this Z-score in a standard normal distribution table or use statistical software, you might find that the p-value is approximately 0.0455. **This means that if the true population mean were 10 cm (as stated in your null hypothesis), there would be about a 4.55% chance of getting a sample mean of 12 cm or more extreme by random chance alone.** \n",
+    "\n",
+    "What is the probability of a population with a mean 10 producing a sample which has a mean 12 assuming that the population mean is 10(which is also the null hypothesis) this is what p value tells us \n",
+    "\n",
+    "\n",
+    "Since this p-value (0.0455) is less than the commonly used significance level of 0.05, you would reject the null hypothesis and conclude that there's significant evidence to suggest that the average height of these plants is not 10 cm.\n",
+    "\n",
+    "Remember, this doesn't prove that the average height is 12 cm (our sample mean), just that it's likely not 10 cm. Also, there's still a 4.55% chance that we could have gotten these results by random chance even if the null hypothesis were true."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "701afeae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
